# 22s1-cp-spa-team-28

./: .clang-format  .gitignore  README.md  run-autotester-ci.py  run-autotester-windows.py  run-autotester.py
Team28/Code28/src/spa/: CMakeLists.txt
Team28/Code28/src/spa/src/: DesignExtractor.cpp  SPA.cpp  SPA.h  Tokenizer.cpp
Team28/Code28/src/spa/src/PKB/: AssignmentsTable.cpp  AssignmentsTable.h  CMakeLists.txt  Constant.cpp  Constant.h  Entity.h  EntityPredicateMap.cpp  EntityPredicateMap.h  Name.cpp  Name.h  NameDefinitions.h  NamesTable.cpp  NamesTable.h  PKB.cpp  PKB.h  PopulateFacade.cpp  PopulateFacade.h  PredicateMap.cpp  PredicateMap.h  ProcToVarRelationshipsTable.h  Procedure.cpp  Procedure.h  QueryFacade.cpp  QueryFacade.h  Relationship.cpp  Relationship.h  RelationshipPredicateMap.h  RelationshipsTable.h  Statement.cpp  Statement.h  StatementPredicateMap.cpp  StatementPredicateMap.h  StatementsTable.cpp  StatementsTable.h  Storage.cpp  Storage.h  Table.h  TableValue.h  Variable.h
Team28/Code28/src/spa/src/PKB/Algorithms/: ControlFlowGraph.cpp  ControlFlowGraph.h
Team28/Code28/src/spa/src/PKB/Facades/: PopulateFacade.cpp  PopulateFacade.h  QueryFacade.cpp  QueryFacade.h
Team28/Code28/src/spa/src/PKB/Storage/: Storage.cpp  Storage.h  StorageView.h
Team28/Code28/src/spa/src/PKB/Tables/: AssignmentsTable.h  Attributable.h  Cache.cpp  Cache.h  NamesTable.h  ProcToVarRelationshipsTable.cpp  Reflexive.h  RelationshipsTable.h  Solvable.h  StatementsTable.cpp  StatementsTable.h  StmtToStmtRelationshipsTable.cpp  StmtToStmtRelationshipsTable.h  StmtToVarRelationshipsTable.cpp  StmtToVarRelationshipsTable.h  Table.h
Team28/Code28/src/spa/src/QPS/: CMakeLists.txt  Declaration.cpp  Declaration.h  DesignEntity.h  Main.cpp  PatternClause.cpp  PatternClause.h  QPS.cpp  QPS.h  QueryFacade.cpp  QueryFacade.h  QueryParser.cpp  QueryParser.h  RelationshipReference.cpp  RelationshipReference.h  SelectClause.cpp  SelectClause.h  SolvableQuery.cpp  SolvableQuery.h  SuchThatClause.cpp  SuchThatClause.h  Synonym.cpp  Synonym.h  Utils.cpp  Utils.h  create_SolvableQuery.cpp
Team28/Code28/src/spa/src/QPS/Clause/: Declaration.cpp  Declaration.h  PatternClause.cpp  PatternClause.h  QueryClause.h  SelectClause.cpp  SelectClause.h  SuchThatClause.cpp  SuchThatClause.h  WithClause.cpp  WithClause.h
Team28/Code28/src/spa/src/QPS/Error/: EmptyTableError.h  ParseError.h  SemanticError.h  SyntaxError.h
Team28/Code28/src/spa/src/QPS/Evaluator/: ClauseResult.cpp  ClauseResult.h  ClauseTable.cpp  ClauseTable.h  PatternEvaluator.cpp  PatternEvaluator.h  QueryEvaluator.cpp  QueryEvaluator.h  QueryResult.cpp  QueryResult.h  RelationshipEvaluator.cpp  RelationshipEvaluator.h  SelectEvaluator.cpp  SelectEvaluator.h  SuchThatEvaluator.cpp  SuchThatEvaluator.h  Table.h  Tuple.cpp  Tuple.h  WithClauseEvaluator.cpp  WithClauseEvaluator.h
Team28/Code28/src/spa/src/QPS/Optimizer/: GroupOptimizer.h  GroupOtimizer.cpp  OrderOptimizer.cpp  OrderOptimizer.h  QueryOptimizer.cpp  QueryOptimizer.h  UFDS.cpp  UFDS.h  WithOptimizer.cpp  WithOptimizer.h
Team28/Code28/src/spa/src/QPS/Parser/: QueryParser.cpp  QueryParser.h  QueryParserRegex.h  SolvableQuery.cpp  SolvableQuery.h
Team28/Code28/src/spa/src/QPS/Reference/: DesignEntity.h  EntityReference.cpp  EntityReference.h  Reference.h  RelationshipReference.h  StatementNumber.h  StatementReference.cpp  StatementReference.h  Synonym.cpp  Synonym.h  VariableName.h
Team28/Code28/src/spa/src/SP/: CMakeLists.txt  DesignExtractor.cpp  DesignExtractor.h  Entity.cpp  Entity.h  EntityNode.cpp  EntityNode.h  ExprParser.cpp  ExprParser.h  ExtractUtils.cpp  ExtractUtils.h  Parser.cpp  Parser.h  Relationship.cpp  Relationship.h  SP.cpp  SP.h  SPUtils.cpp  SPUtils.h  SimpleParser.cpp  SimpleParser.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h
Team28/Code28/src/spa/src/SP2/: SimpleParser.cpp
Team28/Code28/src/spa/src/commons/: AssignExpression.cpp  AssignExpression.h  Assignment.cpp  Assignment.h  CMakeLists.txt  Constant.cpp  Constant.h  Entity.h  Procedure.cpp  Procedure.h  Reference.cpp  Reference.h  Relationship.h  Statement.cpp  Statement.h  StringUtil.h  Synonym.cpp  Synonym.h  TableValue.h  Tuple.h  Value.cpp  Value.h  Variable.cpp  Variable.h
Team28/Code28/src/spa/src/sp/: CMakeLists.txt  ExprParser.cpp  ExprParser.h  Main.cpp  Node.cpp  Node.h  Parser.h  Token.cpp  Token.h
Team28/Code28/src/unit_testing/: CMakeLists.txt
Team28/Code28/src/unit_testing/src/: TestAST.cpp  TestAffectsTable.cpp  TestAssignmentsTable.cpp  TestConstant.cpp  TestControlFlowGraph.cpp  TestDesignExtractor.cpp  TestNamesTable.cpp  TestPKB.cpp  TestPopulateFacade.cpp  TestProcedure.cpp  TestProgramParser.cpp  TestQPS.cpp  TestQPSClauseTable.cpp  TestQPSTuple.cpp  TestQPSUtils.cpp  TestQueryEvaluator.cpp  TestQueryFacade.cpp  TestQueryParser.cpp  TestReference.cpp  TestRelationship.cpp  TestRelationshipsTable.cpp  TestSP.cpp  TestStatementsTable.cpp  TestStorage.cpp  TestStringUtil.cpp  TestTokenizer.cpp  TestUsesControlVarTable.cpp  TestVariable.cpp
Team28/Code28/src/unit_testing/src/PKB/: TestAffectsTTable.cpp  TestAffectsTable.cpp  TestAssignmentsTable.cpp  TestCache.cpp  TestControlFlowGraph.cpp  TestNamesTable.cpp  TestNextTTable.cpp  TestPKB.cpp  TestPopulateFacade.cpp  TestQueryFacade.cpp  TestRelationshipsTable.cpp  TestStatementsTable.cpp  TestStorage.cpp  TestUsesControlVarTable.cpp
Team28/Code28/src/unit_testing/src/QPS/: TestQPSClauseTable.cpp  TestQPSUtils.cpp  TestQueryParser.cpp
Team28/Code28/src/unit_testing/src/SP/: TestDesignExtractor.cpp  TestProgramParser.cpp  TestSP.cpp
Team28/Code28/src/unit_testing/src/commons/: TestConstant.cpp  TestReference.cpp
(+151 files in other folders)
